<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="RtlHardcoded,RtlSymmetry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <io.oasisbloc.wallet.ui.modal.AdvanceInputView
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingBottom="24dp"
            android:text="@string/account_title_agreement"
            android:textColor="@color/text_info"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/agreement1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/icon_checkbox"
            android:paddingLeft="8dp"
            android:text="@string/account_msg_agreement1"
            android:textColor="#55626e" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/agreement2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/icon_checkbox"
            android:paddingLeft="8dp"
            android:text="@string/account_msg_agreement2"
            android:textColor="#55626e" />

    </LinearLayout>

</layout>
