<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/generate"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_default_height"
            android:text="@string/account_action_generate_key_pair"
            android:theme="@style/ThemeOverlay.Accent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextThemeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/account_label_public_key" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/public_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/under_line_light_gray"
            android:ellipsize="end"
            android:paddingBottom="8dp"
            android:singleLine="true"
            android:textColor="@color/text_info"
            android:textSize="16sp"
            tools:text="123qweasdzxc456ertfghfgne5y456uh56rtyuje56uje5dujQWFWQWFQWF" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextThemeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/account_label_private_key" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/under_line_light_gray"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/private_key"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/text_info"
                android:textSize="16sp"
                tools:text="123qweasdzxc456ertfghfgne5y456uh56rtyuje56uje5dujQWFWQWFQWF" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/private_key_visibility"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="center"
                android:src="@drawable/ic_text_visibility"
                app:layout_constraintBottom_toBottomOf="@+id/layout"
                app:layout_constraintRight_toRightOf="@+id/layout"
                app:layout_constraintTop_toTopOf="@+id/layout" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/copy"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:text="@string/account_action_copy_keypair"
            android:theme="@style/ThemeOverlay.Accent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/alert_background"
            android:orientation="vertical"
            android:padding="12dp"
            app:divider="@drawable/empty_8dp"
            app:showDividers="middle">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_alert_warning"
                android:drawablePadding="8dp"
                android:text="@string/account_title_keypair"
                android:textColor="@color/alert_warning"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_msg_keypair"
                android:textColor="@color/alert_warning"
                android:textSize="12sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

</layout>
